--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "scripts": {
-    "test":"tape test/*.js | tap-spec"
+    "test": "tape test/*.js | tap-spec"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^0.9.0",
+    "csv-parse": "0.0.5",
+    "js2xmlparser": "^0.1.3",
     "underscore": "^1.6.0"
   },
   "devDependencies": {
+    "gulp": "^3.8.6",
+    "gulp-browserify": "^0.5.0",
     "tap-spec": "^0.2.0",
     "tape": "^2.13.3"
   }
