--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "async": "^0.9.0",
     "csv-parse": "0.0.5",
     "js2xmlparser": "^0.1.3",
+    "lodash": "^2.4.1",
     "underscore": "^1.6.0"
   },
   "devDependencies": {
