--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "csv-parse": "0.0.5",
     "js2xmlparser": "^0.1.3",
     "lodash": "^2.4.1",
-    "underscore": "^1.6.0",
-    "through": "~2.3.4"
+    "multipipe": "^0.1.1",
+    "through": "~2.3.4",
+    "underscore": "^1.6.0"
   },
   "devDependencies": {
     "gulp": "^3.8.6",
